# scrutinizer

./: .dockerignore  .gitignore  README.md  build.gradle  docker-compose.yaml  pyproject.toml  settings.gradle
ref-app-1/: .gitignore  .gitlab-ci.yml  README.md  build.gradle  docker-compose.yaml  settings.gradle
ref-app-1/frontend/: cypress.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
ref-app-2/: .gitlab-ci.yml  .scrutinizer.env  README.md  README_old.md  package.json  sbom.json
ref-app-2/src/: index.js
reference-env/: README.md
reference-env/ci-example/: .gitlab-ci.yml
reference-env/experiments/: experiment-2-ground-truth.json  experiment-results-schema.json
reference-env/policies/: java-baseline.yaml  npm-baseline.yaml  permissive.yaml  strict.yaml
reference-env/sboms/: experiment-1-baseline.cdx.json  experiment-1-drift.cdx.json  experiment-2-synthetic.cdx.json  ref-app-1-backend.cdx.json  ref-app-1-frontend.cdx.json  (+1 more)
scrutinizer-api/: Dockerfile  build.gradle  docker-compose.yaml
scrutinizer-cli/: .scrutinizer.env.template  FILES.md  INTEGRATION.md  QUICKSTART.md  README.md  install.sh  scrutinizer-hook
scrutinizer-dashboard/: Dockerfile  check-types.js  index.html  nginx.conf  package.json  verify-syntax.mjs  vitest.config.ts  vitest.setup.ts
scrutinizer-engine/: .dockerignore  .gitignore  Dockerfile  build.gradle  settings.gradle
tests/: conftest.py  test_cli.py  test_determinism.py  test_graph.py  test_models.py  test_parser.py
validation/: run-validation.sh
(+248 files in other folders)
